# brainlette

./: .gitignore  README.md
barser/: barser.cabal
barser/src/: Ast.hs  Barser.hs  ParserTypes.hs
barser/src/Internal/: ExprParser.hs  Language.hs  ProgramParser.hs  TypeParser.hs
barser/src/Internal/Parser/: ArgumentParser.hs  ExprParser.hs  Language.hs  ProgramParser.hs  StmtParser.hs  TopDefParser.hs  TypeParser.hs
brainlette-parser/: brainlette-parser.cabal
brainlette-parser/src/: BrainletteParser.hs  ParserTypes.hs
brainlette-parser/src/Internal/: ArgumentParser.hs  ExprParser.hs  Language.hs  ProgramParser.hs  StmtParser.hs  TopDefParser.hs  TypeParser.hs
compiler/: Brainlette.cf  CHANGELOG.md  Justfile  LICENSE  Makefile  brainlette.cabal  cabal.project  flake.nix
compiler/app/: Main.hs  Utils.hs
compiler/app/BMM/: Bmm.hs
compiler/app/Braingen/: Ir.hs  LlvmAst.hs
compiler/app/Brainlette/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
compiler/app/TC/: Error.hs  Tc.hs  Typechecker.hs  Types.hs
compiler/dist-newstyle/cache/: compiler  config
compiler/doc/: doc.md  exp.txt
compiler/inputs/: program.bl
compiler/lib/: runtime.ll
compiler/src/: .gitignore  BranchReturns.hs  Makefile  Utils.hs  brainlette.cabal  flake.nix  fourmolu.yaml  jlc  notes.md  output.ll  output_correct.ll
compiler/src/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
compiler/src/.direnv/flake-inputs/: 3bsb0qdmzyf1mafflmwf78369klzhxg2-source  7ay2dd0w41iqvrnkx19v4vf4f5kkxvc2-source
compiler/src/BMM/: Bmm.hs  Optimize.hs  StringToTop.hs  TcToBmm.hs
compiler/src/Braingen/: Ir.hs  LlvmAst.hs  Output.hs
compiler/src/Frontend/: BranchReturns.hs  Error.hs  Renamer.hs
compiler/src/Frontend/Parser/: ExprParser.hs  ParserTypes.hs  TopDefParser.hs  TypeParser.hs
compiler/src/Frontend/Tc/: Tc.hs  Types.hs
compiler/src/Interpreter/: Interpreter.hs
compiler/src/TC/: Tc.hs
compiler/src/TypeChecker/: Error.hs  Tc.hs  Types.hs
compiler/src/app/: Main.hs  Runtime.hs
compiler/src/clib/: lib.c
compiler/src/inputs/: apply.bl  arrays.bl  bubblesort.bl  bug.bl  for.bl  fun_shadow.bl  hof.bl  hof2.bl  module_test.bl  mul-arrays.bl  program.bl  segfault_1.bl  segfault_2.bl  sort.bl  struct.bl
compiler/src/llvm/: runtime.ll
compiler/src/parser-test/: Generator.hs  Main.hs
compiler/src/src/: Utils.hs
compiler/src/src/BMM/: ArrayWrap.hs  Bmm.hs  Optimize.hs  StringToTop.hs  TcToBmm.hs
compiler/src/src/Braingen/: Ir.hs  LlvmAst.hs  Output.hs  TH.hs
compiler/src/src/Frontend/: BranchReturns.hs  Error.hs  Renamer.hs  Uniter.hs
compiler/src/src/Frontend/Parser/: ArgumentParser.hs  BrainletteParser.hs  ExprParser.hs  Language.hs  ParserTypes.hs  ProgramParser.hs  StmtParser.hs  TopDefParser.hs  TypeParser.hs
compiler/src/src/Frontend/Tc/: Tc.hs  Types.hs
compiler/src/src/Interpreter/: Interpreter.hs
compiler/src/src/Lifting/: Lifter.hs  Types.hs
compiler/src/tc-test/: Main.hs
compiler/src/testsuite/extensions/modules/bad/: bad_import_1.bl  bad_import_2.bl  bad_type.bl  mod.bl
compiler/src/testsuite/extensions/modules/good/: mutual_recursion_a.bl  mutual_recursion_b.bl  sort.bl  sort_caller.bl
compiler/tc-test/: Main.hs
parser/: parser.cabal
parser/inputs/: example2.bl  prg.bl
parser/src/: Ast.hs  Example.hs  Parser.hs
parser/src/Ast/: Types.hs
parser/src/Internal/Ast/: Types.hs
parser/src/Internal/Parser/: ExprParser.hs  Language.hs  TopDefParser.hs  TypeParser.hs  Types.hs
parser/src/Parser/: ArgumentParser.hs  ExprParser.hs  Language.hs  ProgramParser.hs  StmtParser.hs  TopDefParser.hs  TypeParser.hs  Types.hs
tester/: .gitignore  Makefile  flake.nix  test
