cabal-version:   3.0
name:            barser
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      <secret>
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra

library
  import:           warnings
  exposed-modules:
    Ast
    Barser
    Internal.Parser.ArgumentParser
    Internal.Parser.ExprParser
    Internal.Parser.Language
    Internal.Parser.ProgramParser
    Internal.Parser.StmtParser
    Internal.Parser.TopDefParser
    Internal.Parser.TypeParser
    ParserTypes

  build-depends:
    , base    >=4.17
    , parsec
    , text

  hs-source-dirs:   src
  default-language: GHC2021
