cabal-version:   3.0
name:            brainlette-parser
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      <secret>
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wunused-packages

library
  import:           warnings
  exposed-modules:
    BrainletteParser
    Internal.ArgumentParser
    Internal.ExprParser
    Internal.Language
    Internal.ProgramParser
    Internal.StmtParser
    Internal.TopDefParser
    Internal.TypeParser
    ParserTypes

  build-depends:
    , base    >=4.17
    , parsec
    , text

  hs-source-dirs:   src
  default-language: GHC2021
