cabal-version:   3.0
name:            brainlette
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      <secret>
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wno-name-shadowing

executable brainlette
  import:           warnings
  main-is:          Main.hs
  other-extensions: LambdaCase
  other-modules:
    BMM.Bmm
    Braingen.Ir
    Braingen.LlvmAst
    Braingen.Output
    TC.Error
    TC.Tc
    TC.Types
    Utils

  build-depends:
    , array
    , base
    , brainlette-parser
    , containers
    , directory
    , extra
    , filepath
    , mtl
    , process
    , text
    , x86-64bit

  hs-source-dirs:   app
  default-language: GHC2021

test-suite tc
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tc-test, app
  main-is:          Main.hs
  build-depends:
    , base
    , brainlette-parser
    , hspec
    , QuickCheck
    , text
    , mtl
    , containers
    , extra

  other-modules:
    TC.Tc
    TC.Types

  default-language: GHC2021
