cabal-version:   3.0
name:            brainlette
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      sebastianselander, loafey
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wno-name-shadowing

library brainlette-lib
  import:           warnings
  exposed-modules:
    BMM.Bmm
    BMM.TcToBmm
    BMM.Optimize
    Braingen.Ir
    Braingen.LlvmAst
    Braingen.Output
    TypeChecker.Error
    TypeChecker.Tc
    TypeChecker.Types
    BranchReturns
    Utils

  build-depends:
    , array
    , base
    , brainlette-parser
    , containers
    , extra
    , mtl
    , text
    , x86-64bit
    , string-interpolate
    , dlist

  hs-source-dirs:   src
  default-language: GHC2021

executable brainlette
  import:           warnings
  main-is:          Main.hs
  other-modules:
  build-depends:
    , base
    , brainlette-lib
    , brainlette-parser
    , directory
    , text

  hs-source-dirs:   app
  default-language: GHC2021

test-suite tc
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tc-test
  main-is:          Main.hs
  build-depends:
    , base
    , brainlette-lib
    , brainlette-parser
    , hspec
    , QuickCheck
    , text

  default-language: GHC2021
