cabal-version:   3.0
name:            parser
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      <secret>

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall -Wextra

library
  import:           warnings
  exposed-modules:
    Ast.Types
    Parser.ExprParser
    Parser.Types
    Parser.Language
    Parser.TypeParser
    Parser.StmtParser
    Parser.ArgumentParser
    Parser.TopDefParser
    Parser.ProgramParser
    Example

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base        >=4.17
    , parsec
    , text

  hs-source-dirs:   src
  default-language: GHC2021
