cabal-version:   3.0
name:            brainlette
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      sebastianselander, loafey
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wno-name-shadowing

library brainlette-lib
  import:           warnings
  exposed-modules:
    BMM.Bmm
    BMM.Optimize
    BMM.StringToTop
    BMM.TcToBmm
    Braingen.Ir
    Braingen.LlvmAst
    Braingen.Output
    Frontend.BranchReturns
    Frontend.Error
    Frontend.Parser.ArgumentParser
    Frontend.Parser.BrainletteParser
    Frontend.Parser.ExprParser
    Frontend.Parser.Language
    Frontend.Parser.ParserTypes
    Frontend.Parser.ProgramParser
    Frontend.Parser.StmtParser
    Frontend.Parser.TopDefParser
    Frontend.Parser.TypeParser
    Frontend.Renamer
    Frontend.Tc.Tc
    Frontend.Tc.Types
    Interpreter.Interpreter
    Utils

  build-depends:
    , array
    , base
    , containers
    , dlist
    , extra
    , mtl
    , parsec
    , string-interpolate
    , text
    , x86-64bit

  hs-source-dirs:   src
  default-language: GHC2021

executable brainlette
  import:             warnings
  main-is:            Main.hs
  other-modules:
  cpp-options: -DDEBUG
  build-depends:
    , base
    , brainlette-lib
    , directory
    , string-interpolate
    , text

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions: CPP

test-suite tc
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tc-test
  main-is:          Main.hs
  build-depends:
    , base
    , brainlette-lib
    , hspec
    , QuickCheck
    , text

  default-language: GHC2021
