cabal-version:   3.0
name:            brainlette
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander, loafey
maintainer:      sebastianselander, loafey
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wno-name-shadowing
  cpp-options: -DDEBUG

library brainlette-lib
  import:           warnings
  exposed-modules:
    BMM.ArrayWrap
    BMM.Bmm
    BMM.StringToTop
    BMM.TcToBmm
    Braingen.Ir
    Braingen.LlvmAst
    Braingen.Output
    Braingen.TH
    Frontend.BranchReturns
    Frontend.Error
    Frontend.Parser.ArgumentParser
    Frontend.Parser.BrainletteParser
    Frontend.Parser.ExprParser
    Frontend.Parser.Language
    Frontend.Parser.ParserTypes
    Frontend.Parser.ProgramParser
    Frontend.Parser.StmtParser
    Frontend.Parser.TopDefParser
    Frontend.Parser.TypeParser
    Frontend.Renamer
    Frontend.Uniter
    Frontend.Tc.Tc
    Frontend.Tc.Types
    Interpreter.Interpreter
    Lifting.Lifter
    Lifting.Types
    Utils

  build-depends:
    , array               >=0.5.6   && <0.6
    , base                >=4.18.2  && <4.19
    , containers          >=0.6.7   && <0.7
    , directory           >=1.3.8   && <1.4
    , dlist               >=1.0     && <1.1
    , extra               >=1.7.16  && <1.8
    , mtl                 >=2.3.1   && <2.4
    , parsec              >=3.1.16  && <3.2
    , string-interpolate  >=0.3.3   && <0.4
    , syb                 >=0.7.2   && <0.8
    , template-haskell    >=2.20.0  && <2.21
    , text                >=2.0.2   && <2.1
    , filepath            >=1.5.2.0 && <1.6

  hs-source-dirs:   src
  default-language: GHC2021

executable brainlette
  import:             warnings
  main-is:            Main.hs
  other-modules:      Runtime
  build-depends:
    , base                >=4.18.2 && <4.19
    , brainlette-lib
    , directory           >=1.3.8  && <1.4
    , string-interpolate  >=0.3.3  && <0.4
    , template-haskell    >=2.20.0 && <2.21
    , text                >=2.0.2  && <2.1
    , brainlette-lib

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions: CPP

test-suite tc
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tc-test
  main-is:          Main.hs
  build-depends:
    , base            >=4.18.2 && <4.19
    , brainlette-lib
    , hspec
    , mtl             >=2.3.1  && <2.4
    , QuickCheck
    , text            >=2.0.2  && <2.1

  default-language: GHC2021

test-suite parser
  type:             exitcode-stdio-1.0
  hs-source-dirs:   parser-test
  main-is:          Main.hs
  other-modules:    Generator
  build-depends:
    , base
    , brainlette-lib
    , hspec
    , parsec
    , QuickCheck
    , text

  default-language: GHC2021
